2003-11-14  Jackson Harper <jackson@ximian.com>

	* Makefile.am: delete mscorlib.dll
	
2003-11-12 Jackson Harper <jackson@ximian.com>

	* Makefile.am: corlib is now named mscorlib.dll
	
2003-11-12  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in acconfig.h: Add check for signbit, which is missing in
	FreeBSD 4.x.

2003-11-07  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Remove debugging junk accidently checked in.
	
	* configure.in: Add new --with-nptl option to enable NPTL only
	features since auto-detection is not reliable.

	* autogen.sh: Fix previous patch and silence noisy GNU which.	

2003-11-07  Bernie Solomon  <bernard@ugsolutions.com>

	* autogen.sh: tweak glibtool check so it works
	if which doesn't set return code properly

2003-11-07  Zoltan Varga  <vargaz@freemail.hu>

	* autogen.sh: Silence noisy GNU which.
	
	* autogen.sh: Applied patch from Peter Teichman (peter@ximian.com). 
	Use 'glibtool' instead of 'libtool' on OSX. 

2003-11-06  Zoltan Varga  <zovarga@ws-zovarga2>

	* mono/benchmark/pinvoke.cs: New benchmark for testing the performance
	of the managed/unmanaged boundary.

2003-11-06  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in acconfig.h: Add check for __thread keyword in gcc.

2003-10-29  Dick Porter  <dick@ximian.com>

	* man/mono.1: Document MONO_EXTERNAL_ENCODINGS variable

2003-10-16  Miguel de Icaza  <miguel@ximian.com>

	* man/mono.1: Document new --trace options

2003-10-13  Bernie Solomon  <bernard@ugsolutions.com>

	* configure.in: add hppa support (64bit only)
	make solaris build work with Forte compiler

2003-10-13  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Added check for pthread_attr_setstacksize.

	* mono/tests/ChangeLog: New file.
	
2003-10-13  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/Makefile.am: Link the tests with the test driver program
	used for the mini tests.

2003-10-10  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/libtest.c (mono_test_marshal_delegate): Added test for